ENYO-4237: large vertical Picker alignment fix (#833)
* apply line-height for vertical picker with custom text

* update height instead of line-height

* apply additional height to large text pickers

--- a/packages/moonstone/internal/Picker/Picker.less
+++ b/packages/moonstone/internal/Picker/Picker.less
@@ -27,6 +27,7 @@
 		.moon-custom-text({
 			font-size: @moon-item-font-size-large;
 			line-height: @moon-button-small-height-large;
+			height: @moon-button-small-height-large;
 		});
 	}
 
@@ -177,16 +178,16 @@
 	&.vertical .valueWrapper {
 		display: block;
 
-		:global(.enact-text-large)& {
+		.moon-custom-text({
 			padding: 0 @moon-spotlight-outset;
-		}
+		});
 
 		.item {
 			margin: 0 @moon-spotlight-outset;
 
-			:global(.enact-text-large)& {
+			.moon-custom-text({
 				margin: 0;
-			}
+			});
 		}
 	}
 
